recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:12: error: not found: value agngle
    droite(agngle)
           ^Tree:13: error: not found: value lenght
    recule(lenght)
           ^